tests/baselines/reference/unusedParametersinConstructor3.errors.txt
tests/cases/compiler/unusedParametersinConstructor3.ts(3,17): error TS6133: Parameter 'param1' has never been used.
tests/cases/compiler/unusedParametersinConstructor3.ts(3,49): error TS6133: Parameter 'param3' has never been used.


==== tests/cases/compiler/unusedParametersinConstructor3.ts (2 errors) ====
    
    class greeter {
        constructor(param1: string, param2: string, param3: string) {
                    ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'param1' has never been used.
                                                    ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'param3' has never been used.
            param2 = param2 + "dummy value";
        }
    }